apps/base/services/vaultwarden/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bitwarden.l.voltaicforge.com`)
      services:
        - name: bitwardenrs
          port: 80
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        # - name: traefik-forward-auth
        #   namespace: kube-system
    # - kind: Rule
    #   match: Host(`bitwarden.${CLUSTER_DOMAIN}`) && PathPrefix(`/api`)
    #   services:
    #     - name: bitwardenrs
    #       port: 80
    #   middlewares:
    #     - name: traefik-secure-headers
    #       namespace: kube-system
  tls:
    certResolver: cloudflare
